Bug 25452: AX: Don't create addition space AXStaticText element for every bold or link tag https://bugs.webkit.org/show_bug.cgi?id=25452

Canonical link: https://commits.webkit.org/34996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42946 268f45cc-cd09-0410-ab3c-d52691b4dbfc